--- a/TutorialCode.ipynb
+++ b/TutorialCode.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6z3w4Zf1W5vdMrRAjea1v",
+      "authorship_tag": "ABX9TyOp6UDy9DziQBtWs2tSXWFJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "dDZxBuPXRdcm"
       },
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import sys"
+        "import sys\n",
+        "import datetime"
       ]
     },
     {
@@ -51,17 +52,23 @@
       "metadata": {
         "id": "fKJncrsNRtus"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def main():\n",
-        "  n_samples = int(sys.argv[1])\n",
+        "  n_samples = int(23)\n",
+        "  start_time = datetime.datetime.now()\n",
         "  counts = inside_circle(n_samples)\n",
         "  my_pi = 4.0 * counts / n_samples\n",
-        "  print(my_pi)\n",
+        "  end_time = datetime.datetime.now()\n",
+        "  elapsed_time = (end_time - start_time).total_seconds()\n",
+        "  size_of_float = np.dtype(np.float64).itemsize\n",
+        "  memory_required = 3 * n_samples * size_of_float / (1024**3)\n",
+        "  print(\"Pi: {}, memory: {} GiB, time: {} s\".format(my_pi, memory_required,\n",
+        "                                                  elapsed_time))\n",
         "\n",
         "if __name__ == '__main__':\n",
         "  main()"
@@ -69,23 +76,17 @@
       "metadata": {
         "id": "Vwx1pJRQSD3P",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 303
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "92ce3792-b317-4a28-e01b-9e9165416bea"
+        "outputId": "c870d8bd-3077-40aa-9be9-6a935d388166"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: '-f'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-24a10f99e88b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-4-24a10f99e88b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minside_circle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_samples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mmy_pi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4.0\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcounts\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mn_samples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_pi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-f'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pi: 3.3043478260869565, memory: 5.140900611877441e-07 GiB, time: 0.00048 s\n"
           ]
         }
       ]
